--- a/UKMCAB.Subscriptions/UKMCAB.Subscriptions.Core/UKMCAB.Subscriptions.Core.csproj
+++ b/UKMCAB.Subscriptions/UKMCAB.Subscriptions.Core/UKMCAB.Subscriptions.Core.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Data.Tables" Version="12.8.0" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
+    <PackageReference Include="ConcurrentHashSet" Version="1.3.0" />
     <PackageReference Include="GovukNotify" Version="6.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
