--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,4 +38,4 @@ jobs:
       run: dotnet pack "${{ env.WORKING_DIRECTORY }}/UKMCAB.Subscriptions.Core/UKMCAB.Subscriptions.Core.csproj" --configuration ${{ env.CONFIGURATION }} -o:package /p:PackageVersion=1.0.0.0
     
     - name: Push generated package to GitHub registry
-      run: dotnet nuget push "${{ env.WORKING_DIRECTORY }}/UKMCAB.Subscriptions.Core/package/*.nupkg  --source https://nuget.pkg.github.com/OfficeForProductSafetyAndStandards/index.json   --api-key ${{ github.token }}
+      run: dotnet nuget push "${{ env.WORKING_DIRECTORY }}/UKMCAB.Subscriptions.Core/package/*.nupkg"  --source https://nuget.pkg.github.com/OfficeForProductSafetyAndStandards/index.json   --api-key ${{ github.token }}
