--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,10 @@ jobs:
 
     - name: Determine Version
       uses: gittools/actions/gitversion/execute@v0.9.7
-    
+      with:
+          useConfigFile: true
+          configFilePath: ./.github/gitversion.yml
+          
     - name: Restore
       run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
     
