--- a/.github/gitversion.yml
+++ b/.github/gitversion.yml
@@ -1,8 +1,8 @@
 mode: Mainline
 branches:
-  feature:
-    tag: beta
-  main: {}
+  {}
 ignore:
   sha: []
-next-version: 1.0.0
+ignore:
+  sha: []
+
