--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,11 +19,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    
-    - run: |
-          git fetch --unshallow --tags
-          echo $?
-          git tag --list
+      with:
+        fetch-depth: 0
     
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
@@ -31,12 +28,12 @@ jobs:
         dotnet-version: 7.0.x
         
     - name: Install GitVersion
-      uses: gittools/actions/gitversion/setup@v0.9.7
+      uses: gittools/actions/gitversion/setup@v0
       with:
         versionSpec: '5.x'
 
     - name: Determine Version
-      uses: gittools/actions/gitversion/execute@v0.9.7
+      uses: gittools/actions/gitversion/execute@v0
       with:
           useConfigFile: true
           configFilePath: ./.github/gitversion.yml
