--- a/UKMCAB.Subscriptions/UKMCAB.Subscriptions.Core/UKMCAB.Subscriptions.Core.csproj
+++ b/UKMCAB.Subscriptions/UKMCAB.Subscriptions.Core/UKMCAB.Subscriptions.Core.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Domain\Urls\" />
+  </ItemGroup>
+
 </Project>
