IsPackable=actually_true

--- a/UKMCAB.Subscriptions/UKMCAB.Subscriptions.Core/UKMCAB.Subscriptions.Core.csproj
+++ b/UKMCAB.Subscriptions/UKMCAB.Subscriptions.Core/UKMCAB.Subscriptions.Core.csproj
@@ -5,7 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<OutputType>library</OutputType>
-		<IsPackable>false</IsPackable>
+		<IsPackable>true</IsPackable>
 	</PropertyGroup>
 
 	<ItemGroup>
