--- a/UKMCAB.Subscriptions/UKMCAB.Subscriptions.Core/UKMCAB.Subscriptions.Core.csproj
+++ b/UKMCAB.Subscriptions/UKMCAB.Subscriptions.Core/UKMCAB.Subscriptions.Core.csproj
@@ -6,6 +6,7 @@
 		<Nullable>enable</Nullable>
 		<OutputType>library</OutputType>
 		<IsPackable>true</IsPackable>
+		<Version>1.2.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
